--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "src/server/server",
   "scripts": {
-    "start": "node src/server/server",
+    "start": "node src/server/server"
   },
   "private": true,
   "dependencies": {
